<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Atur Kost</string>
    <string name="nama_penghuni">Masukkan Nama Penghuni</string>
    <string name="biaya_kamar">Biaya kamar per bulan</string>
    <string name="tanggal_masuk">Tanggal Masuk</string>
    <string name="nomor_kamar">Masukkan Nomor Kamar</string>
    <string name="home">Home</string>
    <string name="nomorPenghuni">Masukkan No.HP Penghuni</string>
    <string name="about">Aplikasi Atur Kost merupakan aplikasi Android untuk mengatur kost yang dilakukan oleh pemilik kost.\nUntuk mengetahui berapa jumlah penghuni dan berapa penghuni yang belum membayar tagihan.Temukan kodenya di https://github.com/arnolddominggos0/AturKost.git \nAll rights reserved</string>
    <string name="edit">Ubah</string>
    <string name="reset">Reset</string>
    <string name="hapus">Hapus</string>
    <string name="tambah">Tambah Penghuni</string>
    <string name="simpan">Simpan</string>
    <string name="nomorKamar">Kamar No.45</string>
    <string name="lunas">Lunas</string>
    <string name="btn_kontak">Hubungi via WhatsApp</string>
    <string name="belum_ada_data">Belum ada Penghuni</string>
    <string name="konfirmasi_hapus">Yakin untuk hapus?</string>
    <string name="batal">Batal</string>
</resources>