<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/namaPenghuni_hint"
            style="@style/TextInputLayout.AdjacentLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_account_circle_24"
            android:drawablePadding="8dp"
            android:hint="@string/nama_penghuni"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".3"
            app:layout_constraintWidth_percent=".8">

        </EditText>

        <EditText
            android:id="@+id/nomorKamar_hint"
            style="@style/TextInputLayout.AdjacentLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/baseline_door_front_24"
            android:drawablePadding="8dp"
            android:hint="@string/nomor_kamar"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/namaPenghuni_hint"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth=".8"
            app:layout_constraintWidth_percent=".8">

        </EditText>

        <EditText
            android:id="@+id/biayaKamar_hint"
            style="@style/TextInputLayout.AdjacentLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/baseline_payments_24"
            android:drawablePadding="8dp"
            android:hint="@string/biaya_kamar"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomorKamar_hint"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8">

        </EditText>


        <EditText
            style="@style/TextInputLayout.AdjacentLabel"
            android:id="@+id/nomorPenghuni_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintWidth_percent=".8"
            android:layout_marginTop="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:drawableStart="@drawable/baseline_local_phone_24"
            android:drawablePadding="8dp"
            android:hint="@string/nomorPenghuni"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/biayaKamar_hint">
        </EditText>

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/simpan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomorPenghuni_hint" />


        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="@+id/nomorPenghuni_hint"
            app:layout_constraintStart_toEndOf="@+id/btnSimpan"
            app:layout_constraintTop_toBottomOf="@+id/nomorPenghuni_hint" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>